syntax = "proto3";
option go_package = "github.com/ukama/ukama/systems/data-plan/base-rate/pb/gen";
package ukama.dataplan.baserate.v1;

import "validator.proto";

service BaseRatesService {
    rpc GetBaseRatesById (GetBaseRatesByIdRequest) returns (GetBaseRatesByIdResponse) {} /* List of base rates by id */
    rpc GetBaseRatesByCountry(GetBaseRatesByCountryRequest) returns (GetBaseRatesResponse){} /* List of all latest base rates version by network till date */
    rpc GetBaseRatesForPeriod(GetBaseRatesByPeriodRequest) returns (GetBaseRatesResponse){} /* List of all base rates by network in specified period */
    rpc GetBaseRatesForPackage(GetBaseRatesByPeriodRequest) returns (GetBaseRatesResponse){} /* List of all base rates by network in specified period */
    rpc GetBaseRatesHistoryByCountry(GetBaseRatesByCountryRequest) returns (GetBaseRatesResponse){} /* List of all base rates by network till date */
    rpc UploadBaseRates(UploadBaseRatesRequest)returns (UploadBaseRatesResponse){}
}

message GetBaseRatesResponse {
    repeated Rate rates = 1;
}

message GetBaseRatesByCountryRequest{
    string country = 1;
    string provider =2;
    string simType=5 [json_name = "sim_type"];
    string effectiveAt = 6 [json_name = "effective_at"];
}

message GetBaseRatesByPeriodRequest{
    string country = 1;
    string provider = 2;
    string From = 3 [json_name = "from"];
    string To =4  [json_name = "to"];
    string simType=5 [json_name = "sim_type"];
}


message GetBaseRatesByIdResponse{
    Rate rate =1;
}

message GetBaseRatesByIdRequest{
    string uuid = 1 [(validator.field) = {uuid_ver: 4, string_not_empty: true}];
}

message UploadBaseRatesRequest {
    string fileURL = 1 [json_name = "file_url"];
    string effectiveAt = 2 [json_name = "effective_at"];
    string endAt = 3 [json_name = "end_at"];
    string simType = 4 [json_name = "sim_type"];
}
message UploadBaseRatesResponse {
    repeated Rate rate = 1;
}

message Rate{
    string uuid= 1 [(validator.field) = {uuid_ver: 4}];
    string country=2;
    string provider = 3;
    string vpmn =4;
    int64 imsi=5;
    double smsMo=6 [json_name = "sms_mo"];
    double smsMt =7 [json_name = "sms_mt"];
    double data =8;
    bool  _2g=9;
    bool _3g=10;
    bool _5g=11;
    bool lte=12; 
    bool lteM=13 [json_name = "lte_m"];
    string apn=14; 
    string createdAt=15 [json_name = "created_at"];
    string deletedAt=16 [json_name = "deleted_at"];
    string updatedAt=17 [json_name = "updated_at"];
    string effectiveAt=18 [json_name = "effective_at"];
    string endAt=19 [json_name = "end_at"];
    string simType=20 [json_name = "sim_type"];
    string currency =21 [json_name = "currency"];
}
